--- a/Доп_одновимірні масиви.vcxproj.filters
+++ b/Доп_одновимірні масиви.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="3.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="4.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
